--- a/plugins/generix/rc/plugin.rc
+++ b/plugins/generix/rc/plugin.rc
@@ -1,6 +1,6 @@
 1 VERSIONINFO
-FILEVERSION 1, 0, 0, 1
-PRODUCTVERSION 0, 8, 1, 0
+FILEVERSION 1, 0, 0, 0
+PRODUCTVERSION 0, 9, 0, 0
 FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 FILEFLAGS 0x9L
@@ -17,15 +17,15 @@ BEGIN
 		BEGIN
 			VALUE "Comments", "\0"
 			VALUE "CompanyName", "Ulrich Van Den Hekke"
-			VALUE "FileDescription", "XINX Dictionary Plugin"
-			VALUE "FileVersion", "1, 0, 0, 1"
-			VALUE "InternalName", "dictionary"
-			VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2009"
+			VALUE "FileDescription", "XINX Generix Plugin"
+			VALUE "FileVersion", "1, 0, 0, 0"
+			VALUE "InternalName", "generix"
+			VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2010"
 			VALUE "LegalTrademarks", "\0"
-			VALUE "OriginalFilename", "dictionary.dll"
+			VALUE "OriginalFilename", "generix.dll"
 			VALUE "PrivateBuild", "\0"
 			VALUE "ProductName", "XINX"
-			VALUE "ProductVersion", "0, 8, 1, 0"
+			VALUE "ProductVersion", "0, 9, 0, 0"
 			VALUE "SpecialBuild", "\0"
 		END
 	END
