--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,8 @@
-Source: xinx
+	Source: xinx
 Section: devel
 Priority: extra
 Maintainer: Ulrich Van Den Hekke <xinx@shadoware.org>
-Build-Depends: debhelper (>= 7), libxml2-dev (>= 2.7.4), libxslt1-dev (>= 1.1.25), qmake-qt4 (>= 4.5), libqt4-dev (>= 4.5)
+Build-Depends: debhelper (>= 7), libxml2-dev (>= 2.7.4), libxslt1-dev (>= 1.1.25), qt4-qmake (>= 4.5), libqt4-dev (>= 4.5)
 Standards-Version: 3.7.3
 Homepage: http://xinx.shadoware.org/
 
