Update control & Install files

--- a/debian/control
+++ b/debian/control
@@ -89,7 +89,7 @@ Description: XINX is XSL Stylesheet editor
 Package: xinx
 Section: devel
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt4-sql-sqlite (>= 4.5)
 Recommends: xinx-plugins-services, xinx-plugins-cvs, xinx-plugins-svn
 Suggests: xinx-doc, xinx-plugins-gce
 Description: XINX is XSL Stylesheet editor
