--- a/plugins/xsd/rc/plugin.rc
+++ b/plugins/xsd/rc/plugin.rc
@@ -1,6 +1,8 @@
+#include "../../../framework/core/version.h"
+
 1 VERSIONINFO
-FILEVERSION 0, 1, 0, 0
-PRODUCTVERSION 0, 8, 0, 0
+FILEVERSION FILEVER
+PRODUCTVERSION PRODUCTVER
 FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
 FILEFLAGS 0x9L
@@ -19,13 +21,13 @@ BEGIN
 		VALUE "CompanyName", "Ulrich Van Den Hekke"
 		VALUE "FileDescription", "XSD Document Editor"
         VALUE "FileVersion", "0, 1, 0, 0"
-        VALUE "InternalName", "xsdedit"
         VALUE "LegalCopyright", "Copyleft (C) U. Van Den Hekke 2008"
 		VALUE "LegalTrademarks", "\0"
         VALUE "OriginalFilename", "xsd.dll"
 		VALUE "PrivateBuild", "\0"
         VALUE "ProductName", "XINX"
-        VALUE "ProductVersion", "0, 8, 0, 0"
+		VALUE "FileVersion", STRFILEVER
+		VALUE "ProductVersion", STRPRODUCTVER
 		VALUE "SpecialBuild", "\0"
       END
   END
