--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: xinx
 Section: devel
 Priority: extra
 Maintainer: Ulrich Van Den Hekke <xinx@shadoware.org>
-Build-Depends: debhelper (>= 7), libxml2-dev (>= 2.7.4), libxslt1-dev (>= 1.1.25), qt4-qmake (>= 4.5), libqt4-dev (>= 4.5), cdbs
+Build-Depends: debhelper (>= 7), libxml2-dev (>= 2.7.4), libxslt1-dev (>= 1.1.25), qt4-qmake (>= 4.5), libqt4-dev (>= 4.5), cdbs, libsvncpp-dev (>= 0.12)
 Standards-Version: 3.8.4
 Homepage: http://xinx.shadoware.org/
 
