--- a/xinxcrash/CMakeLists.txt
+++ b/xinxcrash/CMakeLists.txt
@@ -1,6 +1,8 @@
 find_package(Qt4 REQUIRED)
 
 set(USE_COMPONENTS True)
+set(QT_USE_QTNETWORK TRUE)
+set(QT_USE_QTXML TRUE)
 set(QT_USE_QTWEBKIT TRUE)
 
 include(UseXinx)
