--- a/framework/core/version.h.in
+++ b/framework/core/version.h.in
@@ -34,6 +34,7 @@
 #define STRFILEVER    xstr(VERSION_MAJOR) "," xstr(VERSION_MINOR) "," xstr(VERSION_RELEASE) "," xstr(VERSION_BUILD) "\0"
 #define STRPRODUCTVER xstr(VERSION_MAJOR) "," xstr(VERSION_MINOR) "," xstr(VERSION_RELEASE) "," xstr(VERSION_BUILD) "\0"
 
+#define VERSION xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE) "." xstr(VERSION_BUILD)
 #define VERSION_STRING "v" xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE)
 #define LONG_VERSION_STRING "v" xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE) "." xstr(VERSION_BUILD)
 
