[TRD] Traduction en français en cours ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project(xinx-project)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules/")
 cmake_minimum_required(VERSION 2.8.0)
 
+add_custom_target(translation)
+
 add_subdirectory(ext/ideality/lib)
 add_subdirectory(ext/qcodeedit/lib)
 add_subdirectory(components)
@@ -24,4 +26,3 @@ find_package(Doxygen)
 if (DOXYGEN_FOUND)
 	add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 endif(DOXYGEN_FOUND)
-
