--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ file(COPY templates DESTINATION ./ PATTERN .svn EXCLUDE)
 file(COPY datas DESTINATION ./ PATTERN .svn EXCLUDE)
 file(COPY scripts DESTINATION ./ PATTERN .svn EXCLUDE)
 
+install(DIRECTORY templates DESTINATION ./ PATTERN .svn EXCLUDE)
+install(DIRECTORY datas DESTINATION ./ PATTERN .svn EXCLUDE)
+install(DIRECTORY scripts DESTINATION ./ PATTERN .svn EXCLUDE)
+install(DIRECTORY ${CMAKE_BINARY_DIR}/i18n DESTINATION ./ PATTERN .svn EXCLUDE)
+
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
 	add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_SOURCE_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
