No more SubVersion

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -5,11 +5,11 @@ find_package(LibXml2 REQUIRED)
 find_package(LibXslt REQUIRED)
 find_package(Subversion)
 
-if(Subversion_FOUND)
-	Subversion_WC_INFO(${PROJECT_SOURCE_DIR} XINX_FRAMEWORK)
-else(Subversion_FOUND)
+#if(Subversion_FOUND)
+#	Subversion_WC_INFO(${PROJECT_SOURCE_DIR} XINX_FRAMEWORK)
+#else(Subversion_FOUND)
 	set(XINX_FRAMEWORK_WC_REVISION 0)
-endif(Subversion_FOUND)
+#endif(Subversion_FOUND)
 configure_file(core/version.h.in core/version.h)
 
 set(USE_COMPONENTS True)
