--- a/framework/core/version.h.in
+++ b/framework/core/version.h.in
@@ -24,18 +24,20 @@
 #define VERSION_MAJOR     0
 #define VERSION_MINOR     10
 #define VERSION_RELEASE   1
-#define VERSION_BUILD     ${XINX_FRAMEWORK_WC_LAST_CHANGED_REV}
+
+#define VERSION_CHANGESET "${XINX_FRAMEWORK_HG_CHANGESET}"
+#define VERSION_CHANGESET_STR "${XINX_FRAMEWORK_HG_CHANGESET_STR}"
 
 #define str(s) #s
 #define xstr(s) str(s)
 
-#define FILEVER    VERSION_MAJOR , VERSION_MINOR , VERSION_RELEASE , VERSION_BUILD
-#define PRODUCTVER VERSION_MAJOR , VERSION_MINOR , VERSION_RELEASE , VERSION_BUILD
-#define STRFILEVER    xstr(VERSION_MAJOR) "," xstr(VERSION_MINOR) "," xstr(VERSION_RELEASE) "," xstr(VERSION_BUILD) "\0"
-#define STRPRODUCTVER xstr(VERSION_MAJOR) "," xstr(VERSION_MINOR) "," xstr(VERSION_RELEASE) "," xstr(VERSION_BUILD) "\0"
+#define FILEVER    VERSION_MAJOR , VERSION_MINOR , VERSION_RELEASE , 0
+#define PRODUCTVER VERSION_MAJOR , VERSION_MINOR , VERSION_RELEASE , 0
+#define STRFILEVER    xstr(VERSION_MAJOR) "," xstr(VERSION_MINOR) "," xstr(VERSION_RELEASE) "\0"
+#define STRPRODUCTVER xstr(VERSION_MAJOR) "," xstr(VERSION_MINOR) "," xstr(VERSION_RELEASE) "\0"
 
-#define VERSION xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE) "." xstr(VERSION_BUILD)
-#define VERSION_STRING "v" xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE)
-#define LONG_VERSION_STRING "v" xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE) "." xstr(VERSION_BUILD)
+#define VERSION xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE) VERSION_CHANGESET_STR
+#define VERSION_STRING "v" xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR)
+#define LONG_VERSION_STRING "v" xstr(VERSION_MAJOR) "." xstr(VERSION_MINOR) "." xstr(VERSION_RELEASE) VERSION_CHANGESET_STR
 
 #endif /* _VERSION_H_ */
