--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,15 @@
-pipeline:
-    build:
-        image: debian:8
-        commands:
-            - apt-get update
-            - apt-get install -y --no-install-recommends build-essential cmake doxygen libxml2-dev libxslt-dev qt4-qmake libqt4-dev libqtwebkit-dev pkg-config libsvn-dev libsvncpp-dev libapr1-dev
-            - mkdir build
-            - cd build
-            - cmake ../
-            - make
-            - make install
+kind: pipeline
+type: docker
+name: default
+
+steps:
+  - name: docker
+    image: debian:8
+    commands:
+      - apt-get update
+      - apt-get install -y --no-install-recommends build-essential cmake doxygen libxml2-dev libxslt-dev qt4-qmake libqt4-dev libqtwebkit-dev pkg-config libsvn-dev libsvncpp-dev libapr1-dev
+      - mkdir build
+      - cd build
+      - cmake ../
+      - make
+      - make install
